--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-  <div class="top-container">
+  <div class="top-container container-fluid">
     <img class="top-cloud" src="cloud.png" alt="Cloud">
     <h1> I am Hernan, a Web Developer</h1>
     <h4>From one code to a whole world</h4>
@@ -44,7 +44,7 @@
 
 </div>
 
-<div class="middle-container">
+<div class="middle-container container-fluid">
   <div class="profile">
     <img class="Me" src="image of me.jpg"  alt="Me">
     <h2>Welcome to my Webpage!</h2>
@@ -75,7 +75,7 @@
 </div>
 
 
-<div class="bottom-container">
+<div class="bottom-container container-fluid">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
 
