--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2>Let's get In touch!</h2>
     <h3>How you can contact me </h3>
     <p class="getintouch">If you want to get in contact with me to discuss about a project, or an idea that you have, don´t hesitate to reach me by clicking on the button below.</p>
-    <a href="mailto:hgonzalezghirimoldi@hotmail.com" class="btn">Contact me</a>
+    <button href="mailto:hgonzalezghirimoldi@hotmail.com" type="button" class="btn btn-lg btn-block btn-outline-primary">Contact me</button>
   </div>
   </div>
 </div>
