--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 
       <title>Hernan Web Developer</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
   </head>
   <body>
 
-  <div class="top-container container-fluid">
+  <div class="top-container">
     <img class="top-cloud" src="cloud.png" alt="Cloud">
     <h1> I am Hernan, a Web Developer</h1>
     <h4>From one code to a whole world</h4>
@@ -25,28 +23,28 @@
 <!-- <img class="mountainnn" src="mountain.png" alt="Mountain"> -->
 <img class="rocket"src="https://img.icons8.com/plasticine/100/000000/rocket.png" alt="rocket">
 <div>
-  <img class="star1" src="icons8-star-96.png">
+  <img class="star1" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
 </div>
 
 <div>
-  <img class="star2" src="icons8-star-96.png">
+  <img class="star2" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
 </div>
 <div>
-  <img class="star3" src="icons8-star-96.png">
+  <img class="star3" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
 </div>
 <div>
-  <img class="star4" src="icons8-star-96.png">
+  <img class="star4" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
 </div>
 
-<img class="shooting-stars" src="icons8-shooting-stars-96.png">
-<img class="internet" src="icons8-internet-128.png">
+<img class="shooting-stars" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-shooting-stars-96.png">
+<img class="internet" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-internet-128.png">
 
 
 </div>
 
-<div class="middle-container container-fluid">
+<div class="middle-container">
   <div class="profile">
-    <img class="Me" src="image of me.jpg"  alt="Me">
+    <img class="Me" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\image of me.jpg"  alt="Me">
     <h2>Welcome to my Webpage!</h2>
     <p class="presentation">I am a Web Developer and Web Designer, I also work with Digital Marketing to make your website more effective in attracting your next best customers.</p>
   </div>
@@ -54,12 +52,12 @@
   <div class="skills">
     <h2 class="myskills">My Skills.</h2>
     <div class="skill-row">
-      <img class="computer" src="development.png" alt="Computer">
+      <img class="computer" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\development.png" alt="Computer">
       <h3>Coding languages I use</h3>
       <p>I work with HTML5, CSS3, Javascript and more. I also create websites through Wordpress if you want a simpler option.</p>
     </div>
     <div class="skill-rowt">
-      <img class="coding" src="domain.png" alt="coding">
+      <img class="coding" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\domain.png" alt="coding">
       <h3>What I offer</h3>
       <p class="offerparagraph">We work together as a team, I focus on your needs and what you are looking for, and with my approach I create the Website that fits into your idea. Besides, I can help you manage the Marketing on your website, improving the positioning on Google, SEO and being more effective attracting new customers. </p>
 
@@ -69,13 +67,13 @@
     <h2>Let's get In touch!</h2>
     <h3>How you can contact me </h3>
     <p class="getintouch">If you want to get in contact with me to discuss about a project, or an idea that you have, don´t hesitate to reach me by clicking on the button below.</p>
-    <button href="mailto:hgonzalezghirimoldi@hotmail.com" type="button" class="btn btn-lg btn-block btn-outline-primary">Contact me</button>
+    <a href="mailto:hgonzalezghirimoldi@hotmail.com" class="btn">Contact me</a>
   </div>
   </div>
 </div>
 
 
-<div class="bottom-container container-fluid">
+<div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
 
