--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
       <title>Hernan Web Developer</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
@@ -23,28 +23,28 @@
 <!-- <img class="mountainnn" src="mountain.png" alt="Mountain"> -->
 <img class="rocket"src="https://img.icons8.com/plasticine/100/000000/rocket.png" alt="rocket">
 <div>
-  <img class="star1" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
+  <img class="star1" src="icons8-star-96.png">
 </div>
 
 <div>
-  <img class="star2" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
+  <img class="star2" src="icons8-star-96.png">
 </div>
 <div>
-  <img class="star3" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
+  <img class="star3" src="icons8-star-96.png">
 </div>
 <div>
-  <img class="star4" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-star-96.png">
+  <img class="star4" src="icons8-star-96.png">
 </div>
 
-<img class="shooting-stars" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-shooting-stars-96.png">
-<img class="internet" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\icons8-internet-128.png">
+<img class="shooting-stars" src="icons8-shooting-stars-96.png">
+<img class="internet" src="icons8-internet-128.png">
 
 
 </div>
 
 <div class="middle-container">
   <div class="profile">
-    <img class="Me" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\image of me.jpg"  alt="Me">
+    <img class="Me" src="image of me.jpg"  alt="Me">
     <h2>Welcome to my Webpage!</h2>
     <p class="presentation">I am a Web Developer and Web Designer, I also work with Digital Marketing to make your website more effective in attracting your next best customers.</p>
   </div>
@@ -52,12 +52,12 @@
   <div class="skills">
     <h2 class="myskills">My Skills.</h2>
     <div class="skill-row">
-      <img class="computer" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\development.png" alt="Computer">
+      <img class="computer" src="development.png" alt="Computer">
       <h3>Coding languages I use</h3>
       <p>I work with HTML5, CSS3, Javascript and more. I also create websites through Wordpress if you want a simpler option.</p>
     </div>
     <div class="skill-rowt">
-      <img class="coding" src="C:\Users\Hernan\Desktop\Web Development\HTML Personal Site\images\domain.png" alt="coding">
+      <img class="coding" src="domain.png" alt="coding">
       <h3>What I offer</h3>
       <p class="offerparagraph">We work together as a team, I focus on your needs and what you are looking for, and with my approach I create the Website that fits into your idea. Besides, I can help you manage the Marketing on your website, improving the positioning on Google, SEO and being more effective attracting new customers. </p>
 
